tests/negative/test_type_arr_size_zero.orb
let a:(i32 0);

fnc main() () {};